fixed collapsed style

--- a/src/css/checkout/checkout.styl
+++ b/src/css/checkout/checkout.styl
@@ -737,6 +737,7 @@
     checkout
       width: 100%
       margin-right: 0
+      min-height: 0
 
     cart
       h1
